# actix-web-diesel-with-controllers-services-repositories-pattern

./: .env  Cargo.toml  README.md
migrations/2021-10-27-063219_create_organisation/: up.sql
migrations/2022-01-21-025215_create_organisations/: up.sql
src/: config.rs  lib.rs  main.rs  schema.rs
src/config/: mod.rs
src/controllers/: mod.rs  organisation_controller.rs  user_controller.rs
src/models/: errors.rs  mod.rs  organisation.rs
src/organisations/models/: domains.rs  mod.rs
src/repositories/: mod.rs  organisation_repository.rs
src/services/: mod.rs  organisation_service.rs
