[package]
name = "rent_management_system_api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-rt = "2.6.0"
dotenv = "0.15.0"
diesel = { version = "1.4.8", features = ["postgres", "chrono", "r2d2"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0.130", features = ["derive"] }
r2d2 = "0.8.9"
config = "0.11.0"
eyre = "0.6.6"
color-eyre = "0.6.0"
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-log = { version="0.1.2", features = ["env_logger"] }
tracing-subscriber = { version = "0.3.6", features = ["env-filter"] }